Add MaxPermSize to jvm-opts